force-app/main/default/objects/MRC__c/MRC__c.object-meta.xml
<CustomObject>
    <label>MRC</label>
    <nameField>
        <label>MRC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>