force-app/main/default/objects/MRC__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
	NOT(
		ISBLANK(Sales_Organization__c)
	),
	OR(
		ISBLANK(Sold_To__r.RV_Sold_To_Deletion_Flag_at_Sales_Area__c),
		NOT(
		CONTAINS(Sold_To__r.RV_Sold_To_Deletion_Flag_at_Sales_Area__c, Sales_Organization__c)
		)
	),
	ISBLANK(Sold_To__r.RV_Sold_To_Deletion_Flag_at_All_Areas__c),
	Valid_To_Date__c &gt;=  TODAY(),
	Valid_From_Date__c &lt;= TODAY(),
	ISBLANK(RV_Rejection_Code__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>