force-app/main/default/objects/MRC__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract No XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>