force-app/main/default/objects/MRC__c/fields/Cust_SoldTo_Cr_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cust_SoldTo_Cr_Limit__c</fullName>
    <formula>IF(Sales_Organization__c == &apos;DE01&apos;, Sold_To__r.DE01_Customer_Credit_Limit__c,  Sold_To__r.Rv_AT01_Customer_Credit_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer (Sold-To) Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>