force-app/main/default/objects/MRC__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>