force-app/main/default/objects/MRC__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>