force-app/main/default/objects/MRC__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <formula>TEXT(Product__r.Commodity_Grade_L2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>