force-app/main/default/objects/MRC__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <formula>Product__r.Material_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>