force-app/main/default/objects/MRC__c/fields/MRC_Number__c.field-meta.xml
<CustomField>
    <fullName>MRC_Number__c</fullName>
    <formula>IF(NOT(OR(BEGINS(Name, &apos;0Barge&apos;), (BEGINS(Name, &apos;0Truck&apos;)))), MID( Name , 0, 10), Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC Number</label>
    <type>Text</type>
</CustomField>