force-app/main/default/objects/MRC__c/fields/Online_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_Customer_Name__c</fullName>
    <formula>Sold_To__r.Rv_Online_Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Customer Name</label>
    <type>Text</type>
</CustomField>