force-app/main/default/objects/MRC__c/fields/Online_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_Location_Name__c</fullName>
    <formula>Plant__r.Online_Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Location Name</label>
    <type>Text</type>
</CustomField>