force-app/main/default/objects/MRC__c/fields/Online_Material_Name_Taxed__c.field-meta.xml
<CustomField>
    <fullName>Online_Material_Name_Taxed__c</fullName>
    <formula>Product__r.Online_Material_Name_Taxed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Material Name [Taxed]</label>
    <type>Text</type>
</CustomField>