force-app/main/default/objects/MRC__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>MRC</relationshipLabel>
    <relationshipName>MRC</relationshipName>
    <type>Lookup</type>
</CustomField>