force-app/main/default/objects/MRC__c/fields/Plant_Code_XLS__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code_XLS__c</fullName>
    <label>Plant Code XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>