force-app/main/default/objects/MRC__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Number</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>MRC</relationshipLabel>
    <relationshipName>MRC</relationshipName>
    <type>Lookup</type>
</CustomField>