force-app/main/default/objects/MRC__c/fields/ProductLocationKey__c.field-meta.xml
<CustomField>
    <fullName>ProductLocationKey__c</fullName>
    <formula>Plant_Code__c+ &apos;-&apos; +  Material_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductLocationKey</label>
    <type>Text</type>
</CustomField>