force-app/main/default/objects/MRC__c/fields/Rv_Available_for_OLF__c.field-meta.xml
<CustomField>
    <fullName>Rv_Available_for_OLF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for OLF</label>
    <type>Checkbox</type>
</CustomField>