force-app/main/default/objects/MRC__c/fields/RV_Condition_group_2__c.field-meta.xml
<CustomField>
    <fullName>RV_Condition_group_2__c</fullName>
    <label>Condition group 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>