force-app/main/default/objects/MRC__c/fields/RV_Condition_group_2_Description__c.field-meta.xml
<CustomField>
    <fullName>RV_Condition_group_2_Description__c</fullName>
    <label>Condition group 2 Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>