force-app/main/default/objects/MRC__c/fields/RV_Incoterms_Part1__c.field-meta.xml
<CustomField>
    <fullName>RV_Incoterms_Part1__c</fullName>
    <label>Incoterms Part1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>