force-app/main/default/objects/MRC__c/fields/RV_OLF_MRC_Only__c.field-meta.xml
<CustomField>
    <fullName>RV_OLF_MRC_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, MRC will only be available for OLF.</inlineHelpText>
    <label>OLF MRC Only</label>
    <type>Checkbox</type>
</CustomField>