force-app/main/default/objects/MRC__c/fields/RV_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>RV_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>