force-app/main/default/objects/MRC__c/fields/RV_Payment_Method_Description__c.field-meta.xml
<CustomField>
    <fullName>RV_Payment_Method_Description__c</fullName>
    <label>Payment Method Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>