force-app/main/default/objects/MRC__c/fields/RV_Payment_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>RV_Payment_Terms_Description__c</fullName>
    <label>Payment Terms Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>