force-app/main/default/objects/MRC__c/fields/RV_Shipping_Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>RV_Shipping_Condition_Description__c</fullName>
    <label>Shipping Condition Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>