force-app/main/default/objects/MRC__c/fields/Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document__c</fullName>
    <label>Sales Document</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>