force-app/main/default/objects/MRC__c/fields/Ship_to_Customer_group__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Customer_group__c</fullName>
    <label>Ship-to Customer group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>