force-app/main/default/objects/MRC__c/fields/Ship_to_party_PO_type__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_party_PO_type__c</fullName>
    <label>Ship-to party PO type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>