force-app/main/default/objects/MRC__c/fields/Ship_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Street__c</fullName>
    <label>Ship-to Street</label>
    <length>225</length>
    <type>Text</type>
</CustomField>