force-app/main/default/objects/MRC__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-To Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected customer is not a valid customer. Please select a valid customer type.</errorMessage>
        <filterItems>
            <field>Account.Customer_Type__c</field>
            <operation>equals</operation>
            <value>Sold To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRC</relationshipLabel>
    <relationshipName>MRC</relationshipName>
    <type>Lookup</type>
</CustomField>