force-app/main/default/objects/MRC__c/fields/Sold_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Number__c</fullName>
    <label>Sold-To-Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>