force-app/main/default/objects/MRC__c/fields/Sold_To_Number_XLS__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Number_XLS__c</fullName>
    <label>Sold To Number XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>