force-app/main/default/objects/MRC__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>Target quantity UoM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>