force-app/main/default/objects/MRC__c/fields/Valid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_To_Date__c</fullName>
    <label>Valid To Date</label>
    <type>Date</type>
</CustomField>