force-app/main/default/objects/MRC__c/recordTypes/DI_Dashboard.recordType-meta.xml
<RecordType>
    <fullName>DI_Dashboard</fullName>
    <active>true</active>
    <description>Created for Revolution Dashboard</description>
    <label>DI-Dashboard</label>
</RecordType>