force-app/main/default/objects/MRC__c/recordTypes/MRC.recordType-meta.xml
<RecordType>
    <fullName>MRC</fullName>
    <active>true</active>
    <label>MRC</label>
</RecordType>