force-app/main/default/objects/MRC__c/validationRules/MRC_Name_not_editable_by_DI_User.validationRule-meta.xml
<ValidationRule>
    <fullName>MRC_Name_not_editable_by_DI_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Name),NOT( $Profile.Name ==&apos;System Administrator&apos; || $Profile.Name ==&apos;Integration Profile&apos;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change MRC Name</errorMessage>
</ValidationRule>