force-app/main/default/objects/MRC__c/listViews/OLF.listView-meta.xml
<ListView>
    <fullName>OLF</fullName>
    <columns>Sold_To__c</columns>
    <columns>Plant__c</columns>
    <columns>Product__c</columns>
    <columns>Rv_Available_for_OLF__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Handling_Type__c</columns>
    <columns>Material_Description__c</columns>
    <columns>NAME</columns>
    <columns>Ship_to_Number__c</columns>
    <columns>Load_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MRC__c.MRC</value>
    </filters>
    <filters>
        <field>Rv_Available_for_OLF__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>OLF</label>
</ListView>