force-app/main/default/objects/MRC__c/listViews/Revolution.listView-meta.xml
<ListView>
    <fullName>Revolution</fullName>
    <columns>Sold_To__c</columns>
    <columns>Plant__c</columns>
    <columns>Product__c</columns>
    <columns>Handling_Type__c</columns>
    <columns>Material_Description__c</columns>
    <columns>NAME</columns>
    <columns>Ship_to_Number__c</columns>
    <columns>Sold_To_Number__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Mode_Of_Transport__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Revolution</label>
</ListView>