force-app/main/default/objects/MRC__c/listViews/som.listView-meta.xml
<ListView>
    <fullName>som</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Handling_Type__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Plant__c</columns>
    <columns>Sold_To__c</columns>
    <columns>Material_Description__c</columns>
    <columns>Material_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Shipping_Condition__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>323073872</value>
    </filters>
    <label>som</label>
</ListView>