force-app/main/default/objects/MRC__c/listViews/Term_and_spot_trigger.listView-meta.xml
<ListView>
    <fullName>Term_and_spot_trigger</fullName>
    <columns>Sold_To__c</columns>
    <columns>Plant__c</columns>
    <columns>Product__c</columns>
    <columns>Rv_Available_for_OLF__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Handling_Type__c</columns>
    <columns>Material_Description__c</columns>
    <columns>NAME</columns>
    <columns>Ship_to_Number__c</columns>
    <columns>Sold_To_Number__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Mode_Of_Transport__c</columns>
    <columns>Shipping_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PO_Type__c</field>
        <operation>equals</operation>
        <value>TTTT</value>
    </filters>
    <label>Term and spot trigger</label>
</ListView>