force-app/main/default/objects/MRC__c/listViews/Test_issue_SOM.listView-meta.xml
<ListView>
    <fullName>Test_issue_SOM</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Plant__c</columns>
    <columns>Sold_To__c</columns>
    <columns>Material_Description__c</columns>
    <columns>Material_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>apoorva</value>
    </filters>
    <label>Test issue (SOM)</label>
</ListView>